samples/_failures_safe/1761128764_da5ef2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_799de6c2.c: In function ‘main’:
./samples/SAFE/__tmp_799de6c2.c:158:13: error: expected declaration or statement at end of input
  158 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_799de6c2.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_799de6c2.c:158:13: error: expected declaration or statement at end of input
